# input-gen

./: .gitignore  LICENSE  Makefile  README.md  demo.py  pyproject.toml
src/input_gen/: __init__.py  generator.py
src/input_gen/strategies/: __init__.py  containers.py  dispatch.py  graphs.py  primitives.py
tests/: conftest.py  test_containers.py  test_generator.py  test_graphs.py  test_primitives.py
