[project]
name = "input-gen"
version = "0.1.0"
description = "A library for generating inputs based on configurations."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.8.0",
    "hypothesis>=6.151.9",
    "hypothesis-jsonschema>=0.23.1",
    "networkx>=3.6.1",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "types-networkx>=3.6.1.20260303",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/input_gen"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["input_gen.strategies.graphs", "tests.test_graphs", "tests.conftest"]
ignore_errors = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "S", "T20", "Q"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is expected in tests
"demo.py" = ["T201"]   # print is intentional in demo scripts
